# Behaviour-Analyser

./: README.txt
Behaviour Analyser/: CMakeLists.txt  config.c  csv.c  functions.h  graphs.c  main.c  movements.c  reader.c
